# egui_inspect

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
egui_example/: Cargo.toml
egui_example/src/: main.rs
egui_inspect/: Cargo.toml
egui_inspect/src/: base_type_inspect.rs  lib.rs
egui_inspect_derive/: Cargo.toml
egui_inspect_derive/src/: internal_paths.rs  lib.rs  utils.rs
