[package]
name = "egui_inspect"
version = "0.1.0"
edition = "2021"
description = "Easily creating UI to edit and preview data"
readme = "../README.md"
repository = "https://github.com/Meisterlama/egui_inspect"
homepage = "https://github.com/Meisterlama/egui_inspect"
license = "MIT"
categories = [ "gui", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect_derive = { path = "../egui_inspect_derive", version = "0.1" }
egui = "0.16"