[package]
name = "egui_inspect_derive"
version = "0.1.0"
edition = "2021"
description = "Derived traits for egui_inspect crate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["proc-macro", "derive", "parsing"] }
quote = "1.0"
darling = "0.13"